test/regress/3200.test
; Issue #3200: --strict-commodity warns about undeclared commodities only,
; without warning about undeclared accounts, payees, or tags.

commodity $
    format $1,000.00

2007/02/02 Foo
    Expenses:Food                         $10.00
    Assets:Cash

2007/02/03 Bar
    Expenses:Food                         20 EUR
    Assets:Cash

2007/02/04 Baz
    ; Note: undeclared
    Expenses:Food                         30 GBP
    Assets:Cash

test reg --strict-commodity
07-Feb-02 Foo                   Expenses:Food                $10.00       $10.00
                                Assets:Cash                 $-10.00            0
07-Feb-03 Bar                   Expenses:Food                20 EUR       20 EUR
                                Assets:Cash                 -20 EUR            0
07-Feb-04 Baz                   Expenses:Food                30 GBP       30 GBP
                                Assets:Cash                 -30 GBP            0
__ERROR__
Warning: "$FILE", line 12: Unknown commodity 'EUR'
Warning: "$FILE", line 17: Unknown commodity 'GBP'
end test

test reg --pedantic-commodity -> 2
__ERROR__
While parsing file "$FILE", line 12:
While parsing posting:
  Expenses:Food                         20 EUR
                                        ^^^^^^
Error: Unknown commodity 'EUR'
While parsing file "$FILE", line 17:
While parsing posting:
  Expenses:Food                         30 GBP
                                        ^^^^^^
Error: Unknown commodity 'GBP'
end test

test reg --strict-commodity --strict
07-Feb-02 Foo                   Expenses:Food                $10.00       $10.00
                                Assets:Cash                 $-10.00            0
07-Feb-03 Bar                   Expenses:Food                20 EUR       20 EUR
                                Assets:Cash                 -20 EUR            0
07-Feb-04 Baz                   Expenses:Food                30 GBP       30 GBP
                                Assets:Cash                 -30 GBP            0
__ERROR__
Warning: "$FILE", line 8: Unknown account 'Expenses:Food'
Warning: "$FILE", line 9: Unknown account 'Assets:Cash'
Warning: "$FILE", line 12: Unknown account 'Expenses:Food'
Warning: "$FILE", line 12: Unknown commodity 'EUR'
Warning: "$FILE", line 13: Unknown account 'Assets:Cash'
Warning: "$FILE", line 17: Unknown account 'Expenses:Food'
Warning: "$FILE", line 17: Unknown commodity 'GBP'
Warning: "$FILE", line 18: Unknown account 'Assets:Cash'
Warning: "$FILE", line 15: Unknown metadata tag 'Note'
end test
